--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,7 +61,7 @@ dependencies {
     implementation 'com.android.support.test:rules:1.0.2'
 //    testImplementation 'org.robolectric:robolectric:4.0-alpha-3-SNAPSHOT'
 
-    testImplementation 'org.robolectric:robolectric:4.0-beta-1'
+    // testImplementation 'org.robolectric:robolectric:4.0-beta-1'
 
 
 
