--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,33 +37,31 @@ ext {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-
     implementation "com.android.support:support-v4:$supportLibraryVersion"
     implementation "com.android.support:appcompat-v7:$supportLibraryVersion"
     implementation "com.android.support:cardview-v7:$supportLibraryVersion"
     implementation "com.android.support:recyclerview-v7:$supportLibraryVersion"
     implementation "com.android.support:design:$supportLibraryVersion"
-
-    implementation "android.arch.lifecycle:extensions:1.1.1"
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
     annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
-
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
-    implementation "com.squareup.retrofit2:converter-gson:2.4.0"
-
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+
+
 
     testImplementation 'junit:junit:4.12'
-
     implementation 'com.android.support.test:runner:1.0.2'
-    implementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support.test:rules:1.0.2'
-//    testImplementation 'org.robolectric:robolectric:4.0-alpha-3-SNAPSHOT'
 
+    implementation "com.android.support:support-annotations:$supportLibraryVersion"
+    implementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    //    testImplementation 'org.robolectric:robolectric:4.0-alpha-3-SNAPSHOT'
     // testImplementation 'org.robolectric:robolectric:4.0-beta-1'
 
 
-
-    implementation 'com.squareup.picasso:picasso:2.5.2'
 }
